# ModernDesign_Alexandrescu

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  main.cpp
src/Common/: CMakeLists.txt
src/Common/Utils/: PointerHandler.hpp
src/Common/Widgets/: ExampleWidgets.cpp  ExampleWidgets.hpp  WidgetInterfaces.hpp
src/byBook/chapter_1/: CheckingPolicies.hpp  CreatorPolicies.hpp  SmartPtr.hpp  ThreadingModelPolicies.hpp  WidgetManager.hpp
src/byBook/chapter_2/: CTAssert.hpp  Conversion.hpp  MapToType.hpp  MappingToTypeExample.hpp  NiftyContainer.hpp  NullType.hpp  Select.hpp  TypeTraits.hpp
src/byBook/chapter_3/: LinearHierarchy.hpp  ScatteredHierarchy.hpp  SpecialTypeLists.hpp  TypeList.hpp
src/byBook/chapter_5/: Functor.hpp
ut/: CMakeLists.txt  testMain.cpp
ut/chapter_1/: CMakeLists.txt  testCreatorPolicies.cpp  testSmartPtr.cpp
ut/chapter_2/: CMakeLists.txt  testCTAssert.cpp  testConversion.cpp  testMapToType.cpp  testTypeTraits.cpp
ut/chapter_3/: CMakeLists.txt  TypeListTestsHelper.hpp  testGenLinearHierarchy.cpp  testGenScatterHierarchy.cpp  testSpecialTypeList.cpp  testTypeList.cpp
ut/chapter_5/: CMakeLists.txt  testFunctor.cpp
